<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="yaqiaodeng.com.ebaysearch.SearchFragment">


        <TextView android:id="@+id/eBay_Search_title"
            android:text="@string/eBay_Search" android:layout_width="wrap_content"
            android:textSize="23sp"
            android:textColor="#000099"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp" />

        <TextView android:id="@+id/Keyword_label"
            android:text="@string/Keyword_label" android:layout_width="wrap_content"
            android:textSize="18sp"
            android:textColor="#7C8281"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/keywords_field"
            android:layout_marginLeft="20dp"
            />


        <EditText android:id="@+id/keywords_field"

            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eBay_Search_title"
            android:layout_alignLeft="@+id/eBay_Search_title"
            android:layout_marginTop="45dp"
            android:layout_marginLeft="18dp"/>

        <TextView android:id="@+id/minPrice_label"
            android:text="@string/minPrice_label" android:layout_width="wrap_content"
            android:textSize="18sp"
            android:textColor="#7C8281"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/minPrice_field"
            android:layout_marginLeft="20dp"
            />

        <EditText android:id="@+id/minPrice_field"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/keywords_field"
            android:layout_alignLeft="@+id/eBay_Search_title"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="18dp"/>

        <TextView android:id="@+id/maxPrice_label"
            android:text="@string/maxPrice_label" android:layout_width="wrap_content"
            android:textSize="18sp"
            android:textColor="#7C8281"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/maxPrice_field"
            android:layout_marginLeft="20dp"
            />

        <EditText android:id="@+id/maxPrice_field"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/minPrice_field"
            android:layout_alignLeft="@+id/eBay_Search_title"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="18dp"/>

        <TextView android:id="@+id/sortBy_label"
            android:text="@string/sortBy_label" android:layout_width="wrap_content"
            android:textSize="18sp"
            android:textColor="#7C8281"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/sortBy_spinner"
            android:layout_marginLeft="20dp"
            />

        <Spinner
            android:id="@+id/sortBy_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/maxPrice_field"
            android:layout_alignLeft="@+id/maxPrice_field"
            android:layout_alignStart="@+id/maxPrice_field"
            android:layout_alignRight="@+id/maxPrice_field"
            android:layout_alignEnd="@+id/maxPrice_field" />

        <Button android:id="@+id/clearButton"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/clear_label"
            android:layout_below="@+id/sortBy_spinner"
            android:layout_alignLeft="@+id/sortBy_spinner"
            android:layout_marginTop="30dp"/>

        <Button android:id="@+id/searchButton"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/search_label"
            android:layout_below="@+id/sortBy_spinner"
            android:layout_toRightOf="@id/clearButton"
            android:layout_alignBottom="@id/clearButton"
            android:layout_alignTop="@id/clearButton"
            android:layout_marginLeft="5dp"
            />

        <TextView android:id="@+id/invalid_keywords"
            android:text="@string/invalid_keywords"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:textColor="#F23838"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/clearButton"
            android:layout_centerHorizontal="true" />

        <TextView android:id="@+id/invalid_minPrice"
            android:text="@string/invalid_minPrice"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:textColor="#F23838"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/clearButton"
            android:layout_centerHorizontal="true" />


        <TextView android:id="@+id/invalid_maxPrice"
            android:text="@string/invalid_maxPrice"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:textColor="#F23838"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/clearButton"
            android:layout_centerHorizontal="true" />

        <TextView android:id="@+id/invalid_min_max"
            android:text="@string/invalid_min_max"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:textColor="#F23838"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/clearButton"
            android:layout_centerHorizontal="true" />

        <TextView android:id="@+id/invalid_noResults"
            android:text="No Results Found"
            android:layout_width="wrap_content"
            android:textSize="23sp"
            android:textColor="#F23838"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/clearButton"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>

</ScrollView>